examples/datalog/21_query_features/42_expression_assignment.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_expr_assign
Knowledge graph 'test_expr_assign' created.
Switched to knowledge graph: test_expr_assign
> .kg use test_expr_assign
Switched to knowledge graph: test_expr_assign
> +vals[(10,), (20,), (30,)].
Inserted 3 fact(s) into 'vals'.
> computed(X, Plus10, Times2, Squared) :- vals(X), Plus10 = X + 10, Times2 = X * 2, Squared = X * X.
Script error: Query execution failed: Unsafe rule: Atom { relation: "computed", args: [Variable("X"), Variable("Plus10"), Variable("Times2"), Variable("Squared")] }. Variables ["Plus10", "Squared", "Times2"] in head do not appear in positive body atoms.
