examples/datalog/21_query_features/42_expression_assignment.dl
% Test: Expression assigned to variable
% Expected: Compute and bind to variable
% Category: 21_query_features
% Priority: P2 - Query features

.kg create test_expr_assign
.kg use test_expr_assign

+vals[(10,), (20,), (30,)].

% Compute multiple expressions
computed(X, Plus10, Times2, Squared) :-
    vals(X),
    Plus10 = X + 10,
    Times2 = X * 2,
    Squared = X * X.

?- computed(X, Plus10, Times2, Squared).

.kg use default
.kg drop test_expr_assign
